--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.8"
 
 install:
-  - pip install -r requirements.txt
+  - pip install '.[pandas]'
   - pip install green
   - pip install coveralls
 
